--- a/md/09.md
+++ b/md/09.md
@@ -13,26 +13,26 @@ Una de las tareas más típicas para un ordenador es repetir una instrucción. E
 Un bucle while se ejecuta mientras una condición se cumpla. Su estructura es muy simple:
 
 ```Python
-while *condición*:
-    *instrucciones*
+while *baldintza*:
+    *eragiketak*
 ```
 
 Por ejemplo, vamos a ejecutar un bucle mientras el valor de una variable sea mayor que 0.
 
 ```Python
-contador = 4
-while contador > 0:
-    print("Estoy dentro del bucle")
-    contador = contador - 1
+kontagailua = 4
+while kontagailua > 0:
+    print("Begizta barruan nago")
+    kontagailua = kontagailua - 1
 ```
 
 El resulto en pantalla sería:
 
 ```console
-Estoy dentro del bucle
-Estoy dentro del bucle
-Estoy dentro del bucle
-Estoy dentro del bucle
+Begizta barruan nago
+Begizta barruan nago
+Begizta barruan nago
+Begizta barruan nago
 ```
 
 Nota:
@@ -44,30 +44,30 @@ Nota:
 Crea un programa que defina una variable contador iniciada a 0. Luego escribe un bucle while que mientras contador sea menor que 5 muestre el mensaje Estoy dentro del bucle y que incremente contador en 1.
 
 ```Python
-contador = 0
-while contador < 5:
-    print("Estoy dentro del bucle")
-    contador = contador + 1
+kontagailua = 0
+while kontagailua < 5:
+    print("Begizta barruan nago")
+    kontagailua = kontagailua + 1
 ```
 
 Resultado:
 
 ```console
-Estoy dentro del bucle
-Estoy dentro del bucle
-Estoy dentro del bucle
-Estoy dentro del bucle
-Estoy dentro del bucle
+Begizta barruan nago
+Begizta barruan nago
+Begizta barruan nago
+Begizta barruan nago
+Begizta barruan nago
 ```
 
 Veamos otro ejemplo. El siguiente programa solicita un dato al usuario en un bucle. El programa no saldrá del bucle mientras el usuario no meta un dato distinto de vacío "":
 
 ```Python
-nombre = ""
-while nombre == "":
-    nombre = input("¿Cómo te llamas?")
+izena = ""
+while izena == "":
+    izena = input("Nola deitzen zara?")
 
-print("Hola", nombre)
+print("Kaixo", izena)
 ```
 
 ### 9.1.2    Ejercicio 2.1
@@ -75,22 +75,22 @@ print("Hola", nombre)
 Escribe un programa que solicite dos números al usuario. El primero debe ser menor que el segundo. El bucle debe mostrar los números que hay en el intervalo entre esos dos números.
 
 ```Python
-min = input("Introduce un mínimo: ")
+min = input("Sartu minimo bat: ")
 min = int(min)
 
-max = input("Introduce un máximo: ")
+max = input("Sartu maximo bat: ")
 max = int(max)
 
 while min < max:
-    print(min)
-    min = min + 1
+    print(min)
+    min = min + 1
 ```
 
 Resultado:
 
 ```console
-Introduce un mínimo: 3
-Introduce un máximo: 8
+Sartu minimo bat: 3
+Sartu maximo bat: 8
 3
 4
 5
@@ -104,40 +104,40 @@ Introduce un máximo: 8
 El bucle for lo utilizamos para repetir una acción un número concreto de veces. Más que una condición, utiliza una especie de contador:
 
 ```Python
-for *variable* in *rango*:
-    *instrucciones*
+for *aldagaia* in *zenbat_aldiz*:
+    *eragiketak*
 ```
 
 Por ejemplo, el siguiente bucle mostrará el mensaje hola 4 veces:
 
 ```Python
 for i in range(4):
-    print("Hola")
+    print("Kaixo")
 ```
 
 El resultado sería:
 
 ```console
-Hola
-Hola
-Hola
-Hola
+Kaixo
+Kaixo
+Kaixo
+Kaixo
 ```
 
 Algo muy interesante en los bucles for es que la variable i, la cual podría tener el nombre que queramos, tendrá el valor correspondiente a cada vuelta del bucle. Para verlo mejor, basta con cambiar un poco el programa anterior:
 
 ```Python
 for i in range(4):
-    print("Hola", i)
+    print("Kaixo", i)
 ```
 
 Y comprobar el resultado:
 
 ```console
-Hola 0
-Hola 1
-Hola 2
-Hola 3
+Kaixo 0
+Kaixo 1
+Kaixo 2
+Kaixo 3
 ```
 
 Eso nos puede ser útil en muchos programas.
@@ -148,19 +148,19 @@ Eso nos puede ser útil en muchos programas.
 Escribe un programa que solicite un número al usuario y muestre su tabla de multiplicar del 0 al 10.
 
 ```Python
-valor = input("Sartu zenbaki bat:")
-valor = int(valor)
+balioa = input("Sartu zenbaki bat: ")
+balioa = int(balioa)
 
 for i in range(11):
-    print(valor,"x",i,"=",(valor*i))
-    # Alternativas:
-    # print("%d x %d = %d" % (valor, i, valor * i))
+    print(balioa,"x",i,"=",(balioa*i))
+    # Beste aukera:
+    # print("%d x %d = %d" % (balioa, i, balioa * i))
 ```
 
 Resultado:
 
 ```console
-Sartu zenbaki bat:3
+Sartu zenbaki bat: 3
 0 x 3 = 0
 1 x 3 = 3
 2 x 3 = 6
@@ -171,23 +171,23 @@ Sartu zenbaki bat:3
 Escribe un programa que pida un número al usuario. Si es igual o menor a 0 debe indicar que meta algo mayor, y si no, debe mostrar el mensaje "Python mola!" por pantalla tantas veces como indique el número:
 
 ```Python
-numero = input("Sartu zenbaki bat:")
-numero = int(numero)
+zenbakia = input("Sartu zenbaki bat: ")
+zenbakia = int(zenbakia)
 
-if numero <= 0:
-    print("Debes introducir un número mayor que 0")
+if zenbakia <= 0:
+    print("0 baino handiagoa den zenbaki bat sartu behar duzu")
 else:
-    for i in range(0, numero):
-        print("Python mola!")
+    for i in range(0, zenbakia):
+        print("Python ondo dago!")
 ```
 
 Resultado:
 
 ```console
-Sartu zenbaki bat:3
-Python mola!
-Python mola!
-Python mola!
+Sartu zenbaki bat: 3
+Python ondo dago!
+Python ondo dago!
+Python ondo dago!
 ```
 
 ### 9.2.3    Cambiar el rango
@@ -205,37 +205,37 @@ Por ejemplo:
 
 ```Python
 for i in range(5, 9):
-    print("Hola", i)
+    print("Kaixo", i)
 ```
 
 El resultado sería:
 
 ```console
-Hola 5
-Hola 6
-Hola 7
-Hola 8
+Kaixo 5
+Kaixo 6
+Kaixo 7
+Kaixo 8
 ```
 
 También se puede indicar un tercer parámetro para indicar cómo se salta de un valor a otro. Por ejemplo de 2 en 2:
 
 ```Python
-range(1, 11, 2) \# 1, 3, 5, 7, 9
+range(1, 11, 2) # 1, 3, 5, 7, 9
 ```
 
 En el siguiente ejemplo, el bucle se haría con números pares.
 
 ```Python
 for i in range(0, 6, 2):
-    print("Hola", i)
+    print("Kaixo", i)
 ```
 
 El resultado sería:
 
 ```console
-Hola 0
-Hola 2
-Hola 4
+Kaixo 0
+Kaixo 2
+Kaixo 4
 ```
 
 ### 9.2.4    Hacia atrás
@@ -243,7 +243,7 @@ Hola 4
 También se podría recorrer el bucle hacia atrás, utilizando un salto negativo:
 
 ```Python
-print("Iniciando cuenta atrás: ")
+print("Atzerako kontaketak: ")
 for i in range(5, 0, -1):
     print(i)
 ```
@@ -263,17 +263,17 @@ El resultado sería:
 Escribe un programa que pida un número al usuario. Luego debe mostrar todos los números pares desde 0 hasta el número que haya metido el usuario. Utiliza un bucle for y salta de dos en dos.
 
 ```Python
-valor = input("Sartu zenbaki bat:")
-valor = int(valor)
+balioa = input("Sartu zenbaki bat: ")
+balioa = int(balioa)
 
-for i in range(0, valor, 2):
-    print(i)
+for i in range(0, balioa, 2):
+    print(i)
 ```
 
 Resultado:
 
 ```console
-Sartu zenbaki bat:5
+Sartu zenbaki bat: 5
 0
 2
 4
@@ -284,17 +284,17 @@ Sartu zenbaki bat:5
 Los bucles for son especialmente útiles cuando queremos recorrer todos los elementos de una lista, para mostrarlos, procesarlos o lo que sea. La forma es muy sencilla:
 
 ```Python
-objetos = ["estrella", "seta", "flor"]
-for objeto in objetos:
-    print(objetos)
+gauzak = ["izarra", "harria", "lorea"]
+for gauza in gauzak:
+    print(gauza)
 ```
 
 En cada vuelta del bucle la variable objeto tomara un valor de la lista objetos, así que el resultado sería el siguiente:
 
 ```console
-estrella
-seta
-flor
+izarra
+harria
+lorea
 ```
 
 ### 9.2.7    Saliendo del bucle
@@ -302,10 +302,10 @@ flor
 En ocasiones puede que nos interese salir de un bucle y no seguir procesando nada más. Supongamos que tenemos un programa para buscar un nombre dentro de una lista:
 
 ```Python
-nombres = ["Mia", "Jon", "Arya", "Ane", "Bug", "Ada", "Lisp"]
-for nombre in nombres:
-    if nombre == "Ane":
-        print("Ane está en la lista")
+izenak = ["Mia", "Jon", "Arya", "Ane", "Bug", "Ada", "Lisp"]
+for izena in izenak:
+    if izena == "Ane":
+        print("Ane zerrendan dago")
 ```
 
 El problema de ese programa es que aunque encuentre a Ane, el bucle seguirá hasta el final de la lista. Si esa lista es muy grande, ¡nuestro programa será ineficiente! Como decíamos al principio, los ordenadores son muy tontos. Si no les decimos que paren, seguirán adelante.
@@ -313,10 +313,10 @@ El problema de ese programa es que aunque encuentre a Ane, el bucle seguirá has
 Por suerte, en los bucles podemos usar la instrucción break, la cual conseguirá que el bucle termine de golpe:
 
 ```Python
-nombres = ["Mia", "Jon", "Arya", "Ane", "Bug", "Ada", "Lisp"]
-for nombre in nombres:
-    if nombre == "Ane":
-        print("Ane está en la lista")
+izenak = ["Mia", "Jon", "Arya", "Ane", "Bug", "Ada", "Lisp"]
+for izena in izenak:
+    if izena == "Ane":
+        print("Ane zerrendan dago")
         break
 ```
 
@@ -325,11 +325,11 @@ for nombre in nombres:
 Escribe un programa que defina una lista con 3 números. Luego crea un bucle for que recorra la lista y repita la palabra Python tantas veces como indique el número.
 
 ```Python
-repetir = [3, 6, 2]
+errepikatu = [3, 6, 2]
 
-for veces in repetir:
-    for i in range(veces):
-        print("Python")
+for aldiz in errepikatu:
+    for i in range(aldiz):
+        print("Python")
 ```
 
 Resultado:
@@ -359,24 +359,24 @@ El bucle while se puede utilizar cuando las condiciones no son muy concretas. Po
 Escribe un programa con un bucle while que solicite un nombre al usuario por ejemplo "Ada" y muestre un saludo a ese nombre "Hola Ada". Si se introduce el texto "salir" el bucle debe terminar.
 
 ```Python
-nombre = ""
+izena = ""
 
-while nombre != "salir":
-    nombre = input("Introduce un nombre: ")
-    print("Hola", nombre)
+while izena != "irtetzea":
+    izena = input("Sartu izen bat: ")
+    print("Kaixo", izena)
 
-print("Final.")
+print("Amaiera.")
 ```
 
 Resultado:
 
 ```console
-Introduce un nombre: Ada
-Hola Ada
-Introduce un nombre: Neko
-Hola Neko
-Introduce un nombre: salir
-Final.
+Sartu izen bat: Ada
+Kaixo Ada
+Sartu izen bat: Neko
+Kaixo Neko
+Sartu izen bat: salir
+Amaiera.
 ```
 
 ### 9.4.2    Ejercicio 2.1
@@ -384,26 +384,26 @@ Final.
 Escribe un programa que contenga un bucle while que solicite al usuario un número y que no termine mientras el número sea diferente de 0. Una vez introducido el número debe mostrarse un saludo tantas veces como indique el número. Si el número es menor que 0 debe terminarse el bucle con un break;
 
 ```Python
-valor = ""
+balioa = ""
 
-while valor != 0:
-    valor = input("Introduce un numero: ")
-    valor = int(valor)
-    if valor < 0:
-        break
+while balioa != 0:
+    balioa = input("Sartu zenbaki bat: ")
+    balioa = int(balioa)
+    if balioa < 0:
+        break
 
-    for i in range(valor):
-        print("Hola")
+    for i in range(balioa):
+        print("Kaixo")
 ```
 
 Resultado:
 
 ```console
-Introduce un numero: 3
-Hola
-Hola
-Hola
-Introduce un numero: -1
+Sartu zenbaki bat: 3
+Kaixo
+Kaixo
+Kaixo
+Sartu zenbaki bat: -1
 ```
 
 ### 9.4.3    Ejercicio 2.2
@@ -417,24 +417,24 @@ Crea un programa que solicite al usuario un valor entero, comprueba si es mayor 
 Si el valor introducido no cumple los requisitos debes mostrar un mensaje de advertencia al usuario y terminar el programa.
 
 ```Python
-numero = input("Sartu zenbaki bat:")
-numero = int(numero)
+zenbakia = input("Sartu zenbaki bat: ")
+zenbakia = int(zenbakia)
 
-if numero <= 0 or numero % 2 != 0:
-    print("Debes introducir un número par mayor que 0")
+if zenbakia <= 0 or zenbakia % 2 != 0:
+    print("0 baino handiagoa den zenbaki bikoitia sartu behar duzu")
 else:
-    estrellas = ""
-    while numero > 0:
-        estrellas  = estrellas + "*"
-        numero = numero - 1
+    izarrak = ""
+    while zenbakia > 0:
+        izarrak = izarrak + "*"
+        zenbakia = zenbakia - 1
 
-    print(estrellas)
+    print(izarrak)
 ```
 
 Resultado:
 
 ```console
-Sartu zenbaki bat:6
+Sartu zenbaki bat: 6
 ******
 ```
 
@@ -455,27 +455,27 @@ Y siempre debe terminar en *
 Por ejemplo, si introducen el 4: *-*-*
 
 ```Python
-numero = input("Sartu zenbaki bat:")
-numero = int(numero)
+zenbakia = input("Sartu zenbaki bat: ")
+zenbakia = int(zenbakia)
 
-if numero <= 0 or numero % 2 != 0:
-    print("Debes introducir un número par mayor que 0")
+if zenbakia <= 0 or zenbakia % 2 != 0:
+    print("0 baino handiagoa den zenbaki bikoitia sartu behar duzu")
 else:
-    secuencia = ""
-    numero = numero / 2
-    while numero > 0:
-        secuencia  = secuencia + "*-"
-        numero = numero - 1
+    sekuentzia = ""
+    zenbakia = zenbakia / 2
+    while zenbakia > 0:
+        sekuentzia  = sekuentzia + "*-"
+        zenbakia = zenbakia - 1
 
-    secuencia = secuencia + "*"
+    sekuentzia = sekuentzia + "*"
 
-    print(secuencia)
+    print(sekuentzia)
 ```
 
 Resultado:
 
 ```console
-Sartu zenbaki bat:8
+Sartu zenbaki bat: 8
 *-*-*-*-*
 ```
 
@@ -491,26 +491,26 @@ Crea un programa que solicite al usuario un número entero y usando ese valor de
 ```
 
 ```Python
-numero = input("Sartu zenbaki bat:")
-numero = int(numero)
+zenbakia = input("Sartu zenbaki bat: ")
+zenbakia = int(zenbakia)
 
-if numero <= 0:
-    print("Debes introducir un número mayor que 0")
+if zenbakia <= 0:
+    print("0 baino handiagoa den zenbaki bat sartu behar duzu")
 else:
-    estrellas = "n"
-    for i in range(numero):
-        for j in range(numero):
-            estrellas = estrellas + "*"
-           
-        estrellas = estrellas + "n"
+    izarrak = "\n"
+    for i in range(zenbakia):
+        for j in range(zenbakia):
+            izarrak = izarrak + "*"
+            
+        izarrak = izarrak + "\n"
 
-    print(estrellas)
+    print(izarrak)
 ```
 
 Resultado:
 
 ```console
-Sartu zenbaki bat:2
+Sartu zenbaki bat: 2
 **
 **
 ```
@@ -520,25 +520,25 @@ Sartu zenbaki bat:2
 Crea un programa que solicite al usuario un número entero y calcule su factorial. Por ejemplo el factorial de 5 sería 5 x 4 x 3 x 2 x 1 = 120
 
 ```Python
-numero = input("Sartu zenbaki bat:")
-numero = int(numero)
+zenbakia = input("Sartu zenbaki bat: ")
+zenbakia = int(zenbakia)
 
-if numero <= 0:
-    print("Debes introducir un número mayor que 0")
+if zenbakia <= 0:
+    print("0 baino handiagoa den zenbaki bat sartu behar duzu")
 else:
-    factorial = numero
-    while numero > 1:
-        numero = numero - 1
-        factorial = factorial * numero
+    faktoriala = zenbakia
+    while zenbakia > 1:
+        zenbakia = zenbakia - 1
+        faktoriala = faktoriala * zenbakia
 
-    print("Resultado: ", factorial)
+    print("Emaitza: ", faktoriala)
 ```
 
 Resultado:
 
 ```console
-Sartu zenbaki bat:4
-Resultado: 24
+Sartu zenbaki bat: 4
+Emaitza: 24
 ```
 
 ### 9.4.7    Ejercicio 2.6
@@ -546,34 +546,34 @@ Resultado: 24
 Crea un programa que solicite al usuario un número entero y comprueba si ese número es primo o no, es decir si solamente es divisible por sí mismo o por 1.
 
 ```Python
-numero = input("Sartu zenbaki bat:")
-numero = int(numero)
+zenbakia = input("Sartu zenbaki bat: ")
+zenbakia = int(zenbakia)
 
-if numero <= 0:
-    print("Debes introducir un número mayor que 0")
+if zenbakia <= 0:
+    print("0 baino handiagoa den zenbakia sartu behar duzu")
 else:
-    divisible = False
-    original = numero
-    numero = numero - 1
+    zatigarria = False
+    hasierakoa = zenbakia
+    zenbakia = zenbakia - 1
 
-    while numero > 1 and not divisible:
-        if original % numero == 0:
-            divisible = True
+    while zenbakia > 1 and not zatigarria:
+        if hasierakoa % zenbakia == 0:
+            zatigarria = True
 
-        numero = numero - 1
+        zenbakia = zenbakia - 1
 
 
-    if not divisible:
-        print(original, " es primo.")
-    else:
-        print(original, " NO es primo.")
+    if not zatigarria:
+        print(hasierakoa, " zenbakia lehena da.")
+    else:
+        print(hasierakoa, " lehen ez da.")
 ```
 
 Resultado:
 
 ```console
 Sartu zenbaki bat:5
-5 es primo.
+5 zenbakia lehena da.
 ```
 
 ### 9.4.8    Ejercicio 2.7
@@ -582,11 +582,11 @@ Crea un programa que muestre todas las tablas de multiplicar desde el número 0 
 
 ```Python
 for i in range(11):
-    for j in range(11):
-      print(i,"x",j,"=",i*j)
+    for j in range(11):
+      print(i,"x",j,"=",i*j)
 
-# Lo mismo, de otro modo
+# Honek ere berdin egingo du
 for i in range(11):
-    for j in range(11):
-      print(" %d x %d = %d" % (i, j, i*j))
+    for j in range(11):
+      print(" %d x %d = %d" % (i, j, i*j))
 ```
