--- a/md/10.md
+++ b/md/10.md
@@ -15,20 +15,20 @@ Los programas de ordenador pueden hacer cosas muy complicadas, pero en esencia, 
 Las listas son un conjunto de datos indexados numéricamente. Esa es la definición muy formal, pero su propio nombre ya te dice lo que son: ¡una lista! En el capítulo sobre tipos de datos ya presentamos las listas y vimos cómo se crean:
 
 ```Python
-idiomas = ["Inglés", "Español", "Francés"]
+hizkuntzak = ["Ingelera", "Euskara", "Frantsesa"]
 ```
 
 Recuerda que puedes acceder a los elementos a través de un índice o posición:
 
 ```Python
-idiomas = ["Inglés", "Español", "Francés"]
-print(idiomas[2]) # Francés
+hizkuntzak = ["Ingelera", "Euskara", "Frantsesa"]
+print(idiomas[2]) # Frantsesa
 ```
 La lista se puede representar así:
 
 |0|1|2|
 |--|--|--|
-|`"Inglés"`|`"Español"`|`"Francés"`|
+|`"Ingelera"`|`"Euskara"`|`"Frantsesa"`|
  
 
 ### 10.1.1  Ejercicio 3.0
@@ -52,21 +52,21 @@ Resultado:
 Crea un programa que defina una de 5 números con decimales. Luego crea un bucle que calcule la media de todos los números.
 
 ```Python
-numeros = [3.4, 2.7, 4.3, 6.6, 8.3]
-suma = 0.0
+zenbakiak = [3.4, 2.7, 4.3, 6.6, 8.3]
+batuketa = 0.0
 
-for numero in numeros:
-    suma = suma + numero
+for zenbakia in zenbakiak:
+    batuketa = batuketa + zenbakia
 
-media = suma / len(numeros)
+batazbestekoa = batuketa / len(zenbakiak)
 
-print("La media es: ", media)
+print("Batazbestekoa da: ", media)
 ```
 
 Resultado:
 
 ```Python
-La media es:  5.0600000000000005
+Batazbestekoa da:  5.0600000000000005
 ```
 
 10.2 Extraer partes de la lista
@@ -75,30 +75,30 @@ La media es:  5.0600000000000005
 Usando el índice numérico, se pueden sacar partes de una lista, creando una sub-lista de la misma. Por ejemplo "quiero los tres primeros valores de la lista" o "quiero desde el 4º al 6º" o "quiero los dos últimos". Para eso basta con indicar un rango de índices:
 
 ```Python
-numeros = [1, 2, 3, 4, 5, 6, 7, 8, 9]
-numeros[0:4]  # [1, 2, 3, 4]
-numeros[5:8]  # [6, 7, 8]
+zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
+zenbakiak[0:4]  # [1, 2, 3, 4]
+zenbakiak[5:8]  # [6, 7, 8]
 ```
 
 También se pueden sacar los primeros elementos:
 
 ```Python
-numeros = [1, 2, 3, 4, 5, 6, 7, 8, 9]
-numeros[:6] # [1, 2, 3, 4, 5, 6]
+zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
+zenbakiak[:6] # [1, 2, 3, 4, 5, 6]
 ```
 
 O los últimos valores
 
 ```Python
-numeros = [1, 2, 3, 4, 5, 6, 7, 8, 9]
-numeros[-4:] # [6, 7, 8, 9]
+zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
+zenbakiak[-4:] # [6, 7, 8, 9]
 ```
 
 O simplemente el último de todos:
 
 ```Python
-numeros = [1, 2, 3, 4, 5, 6, 7, 8, 9]
-numeros[-1] # [9]
+zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
+zenbakiak[-1] # [9]
 ```
 
 10.3 Añadir y eliminar elementos
@@ -107,40 +107,40 @@ numeros[-1] # [9]
 Si queremos añadir un elemento a una lista, basta con utilizar la función append:
 
 ```Python
-idiomas = ["Inglés", "Español", "Francés"]
-idiomas.append("Italiano")
-print(idiomas) # ["Inglés", "Español", "Francés", "Italiano"]
+hizkuntzak = ["Ingelera", "Euskara", "Frantsesa"]
+hizkuntzak.append("Italiarra")
+print(hizkuntzak) # ["Ingelera", "Euskara", "Frantsesa", "Italiarra"]
 ```
 
 Y si queremos eliminar un elemento de la lista, se puede usar la orden del:
 
 ```Python
-idiomas = ["Inglés", "Español", "Francés"]
-del idiomas[1]
-print(idiomas) # ["Inglés", "Francés"]
+hizkuntzak = ["Ingelera", "Euskara", "Frantsesa"]
+del hizkuntzak[1]
+print(hizkuntzak) # ["Ingelera", "Frantsesa"]
 ```
 
 Y también se puede cambiar el valor de un elemento de la lista:
 
 ```Python
-idiomas = ["Inglés", "Español", "Francés"]
-idiomas[2] = "Italiano"
+hizkuntzak = ["Ingelera", "Euskara", "Frantsesa"]
+idiomas[2] = "Italiarra"
 ```
 
 Y recuerda, para recorrer la lista, podemos usar un bucle for:
 
 ```Python
-idiomas = ["Inglés", "Español", "Francés"]
-for idioma in idiomas:
-    print(idioma)
+hizkuntzak = ["Ingelera", "Euskara", "Frantsesa"]
+for hizkuntza in hizkuntzak:
+    print(hizkuntza)
 ```
 
 También se puede recorrer la lista utilizando el índice. Para eso tendremos que utilizar la función range, pasándole la longitud de la lista con len:
 
 ```Python
-idiomas = ["Inglés", "Español", "Francés"]
-for i in range(len(idiomas)):
-    print(idiomas[i])
+hizkuntzak = ["Ingelera", "Euskara", "Frantsesa"]
+for i in range(len(hizkuntzak)):
+    print(hizkuntzak[i])
 ```
 
 De todas formas, si no se necesita el índice dentro del bucle, es mejor recorrer la lista sin índice tal y como se hace en el ejemplo anterior.
@@ -152,17 +152,17 @@ En otros lenguajes, a las listas se les llama "arrays". Ya los deberías conocer
 Define una lista de nombres, muéstrala por pantalla. Añade un elemento y muestra la lista por pantalla. Luego elimina un elemento de la lista y muestra la lista por pantalla.
 
 ```Python
-nombres = ["Ada", "Bug", "Neko"]
+izenak = ["Ada", "Bug", "Neko"]
 
-print(nombres)
+print(izenak) # ["Ada", "Bug", "Neko"]
 
-nombres.append("Miranda")
+izenak.append("Miranda")
 
-print(nombres)
+print(izenak) # ["Ada", "Bug", "Neko", "Miranda"]
 
-del nombres[1]
+del izenak[1]
 
-print(nombres)
+print(izenak) # ["Ada", "Neko", "Miranda"]
 ```
 
 Resultado:
@@ -181,8 +181,8 @@ Los diccionarios son conjuntos de datos donde cada elemento tiene una clave y un
 Por ejemplo, podemos definir un diccionario que contenga las edades de varias personas, donde el nombre de la persona es la clave y la edad el valor:
 
 ```Python
-edades = { "Ada": 14, "Bug": 10, "Neko": 2 }
-print(edades["Ada"])  #  14
+adinak = { "Ada": 14, "Bug": 10, "Neko": 2 }
+print(adinak["Ada"])  #  14
 ```
 
 El diccionario se puede representar así:
@@ -196,13 +196,12 @@ El diccionario se puede representar así:
 Define un diccionario llamado telefonos donde guardarás los teléfonos de un par de amigos. La clave será el nombre del amigo y el valor el número de teléfono.
 
 ```Python
-telefonos = {"Ada": 666555333, "Bug": 111000111 }
+telefonoak = {"Ada": 666555333, "Bug": 111000111 }
 
+print(telefonoak) 
 
-print(telefonos)
-
-for nombre in telefonos.keys():
-    print(nombre, telefonos[nombre])
+for izena in telefonoak.keys():
+    print(izena, telefonoak[izena])
 ```
 
 Resultado:
@@ -216,20 +215,20 @@ Ada 666555333
 Para añadir nuevos elementos, se puede asignar un nuevo valor:
 
 ```Python
-edades = {"Ada": 14, "Bug": 10, "Neko": 2}
+adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
 
 print(edades)  # {'Bug': 10, 'Neko': 2, 'Ada': 14}
 
-edades["Miranda"] = 23;
+adinak["Miranda"] = 23;
 
-print(edades) # {'Bug': 10, 'Neko': 2, 'Ada': 14, 'Miranda': 23}
+print(adinak) # {'Bug': 10, 'Neko': 2, 'Ada': 14, 'Miranda': 23}
 
-del edades["Bug"]
+del adinak["Bug"]
 
-print(edades) # {'Neko': 2, 'Ada': 14, 'Miranda': 23}
+print(adinak) # {'Neko': 2, 'Ada': 14, 'Miranda': 23}
 
-for nombre in edades.keys():
-    print(nombre, edades[nombre])
+for izena in adinak.keys():
+    print(izena, adinak[izena])
 ```
 
 ### 10.4.2                       Ejercicio 3.4
@@ -237,22 +236,22 @@ for nombre in edades.keys():
 Utiliza el diccionario telefonos del ejercicio anterior. Solicita al usuario datos para meter una nueva entrada en el diccionario: tendrás que pedir un nombre y un teléfono y luego añadirlo al diccionario. Al finalizar, muestra todos los elementos del diccionario.
 
 ```Python
-telefonos = {"Ada": 666555333, "Bug": 111000111 }
+telefonoak = {"Ada": 666555333, "Bug": 111000111}
 
-nombre = input("Introduce un nombre: ")
-telefono = input("Sartu zenbaki bat:")
+izena = input("Sartu izena: ")
+telefonoa = input("Sartu telefono zenbakia: ")
 
-telefonos[nombre] = int(telefono)
+telefonoak[izena] = int(telefonoa)
 
-for nombre in telefonos.keys():
-    print(nombre, telefonos[nombre])
+for izena in telefonoak.keys():
+    print(izena, telefonoak[izena])
 ```
 
 Resultado:
 
 ```console
-Introduce un nombre: Neko
-Sartu zenbaki bat:333222000
+Sartu izena:: Neko
+Sartu telefono zenbakia: 333222000
 Ada 666555333
 Neko 333222000
 Bug 111000111
@@ -261,18 +260,18 @@ Bug 111000111
 Podemos eliminar valores del diccionario con la función del:
 
 ```Python
-edades = {"Ada": 14, "Bug": 10, "Neko": 2}
-print(edades)  # {'Bug': 10, 'Neko': 2, 'Ada': 14}
-del edades["Bug"]
-print(edades) # {'Neko': 2, 'Ada': 14}
+adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
+print(adinak)  # {'Bug': 10, 'Neko': 2, 'Ada': 14}
+del adinak["Bug"]
+print(adinak) # {'Neko': 2, 'Ada': 14}
 ```
 
 ¿Y si queremos recorrer todos los valores del diccionario? No hay problema, pero tendremos que utilizar una función que nos devuelva todas las claves del diccionario: keys(). Sería así:
 
 ```Python
-edades = {"Ada": 14, "Bug": 10, "Neko": 2}
-for nombre in edades.keys():
-    print(nombre, edades[nombre])
+adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
+for izena in adinak.keys():
+    print(izena, adinak[izena])
 ```
 
 Por pantalla ser vería:
@@ -288,20 +287,20 @@ Neko 2
 Utiliza el diccionario telefonos del ejercicio anterior. Solicita al usuario un nombre, y luego elimina ese elemento del diccionario. Al finalizar, muestra todos los elementos del diccionario.
 
 ```Python
-telefonos = {"Ada": 666555333, "Bug": 111000111 }
+telefonoak = {"Ada": 666555333, "Bug": 111000111 }
 
-nombre = input("Introduce un nombre: ")
+izena = input("Sartu izena: ")
 
-del telefonos[nombre]
+del telefonoak[izena]
 
-for nombre in telefonos.keys():
-    print(nombre, telefonos[nombre])
+for izena in telefonoak.keys():
+    print(izena, telefonoak[izena])
 ```
 
 Resultado:
 
 ```Python
-Introduce un nombre: Bug
+Sartu izena: Bug
 Ada 666555333
 ```
 
@@ -317,19 +316,19 @@ En otros lenguajes, a los diccionarios se les llama hash o hashtables.
 Se pueden crear estructuras de datos anidadas, tan complejas como necesites. Por ejemplo, supongamos que quieres representar los datos de un amigo con el siguiente diccionario:
 
 ```Python
-amigo =  {"nombre": "Neko", "edad": 2}
+laguna =  {"izena": "Neko", "adina": 2}
 ```
 
 ¿Y si quieres tener una estructura de datos que contenga varios amigos? En ese caso, puedes hacer una lista de diccionarios:
 
 ```Python
-amigos = [
-    {"nombre": "Neko", "edad": 2},
-    {"nombre": "Bug", "edad": 10},
-    {"nombre": "Ada", "edad": 14}
+lagunak = [
+    {"izena": "Neko", "adina": 2},
+    {"izena": "Bug", "adina": 10},
+    {"izena": "Ada", "adina": 14}
 ]
-print(amigos[1]) # {"nombre": "Bug", "edad": 10}
-print(amigos[2]["nombre"]) # Ada
+print(lagunak[1]) # {"nombre": "Bug", "edad": 10}
+print(lagunak[2]["izena"]) # Ada
 ```
 
 ### 10.5.1 Ejercicio 3.6
@@ -337,26 +336,26 @@ print(amigos[2]["nombre"]) # Ada
 Escribe un programa que defina una lista de diccionarios llamada cliente que contenga las claves: nombre, email y edad. El programa debe recorrer la lista y mostrar el nombre y edad de cada cliente.
 
 ```Python
-clientes = [
-    {
-        "nombre": "Juan",
-        "email": "jj@terra.com",
-        "edad": 39
-    },
-    {
-        "nombre": "Pedro",
-        "email": "pp@ozu.es",
-        "edad": 42
-    },
-    {
-        "nombre": "Ana",
-        "email": "ana@ole.com",
-        "edad": 37
-    }
+bezeroak = [
+    {
+        "izena": "Juan",
+        "email": "jj@terra.com",
+        "adina": 39
+    },
+    {
+        "izena": "Pedro",
+        "email": "pp@ozu.es",
+        "adina": 42
+    },
+    {
+        "izena": "Ana",
+        "email": "ana@ole.com",
+        "adina": 37
+    }
 ]
 
-for cliente in clientes:
-    print(f"{cliente['nombre']} {cliente['edad']}")
+for bezeroa in bezeroak:
+    print(f"{bezeroak['izena']} {bezeroak['adina']}")
 ```
 
 Resultado:
@@ -370,13 +369,13 @@ Ana 37
 ¿Y si quieres una estructura de datos que contenga el estado de un juego, con sus personajes y sus objetos? Podría hacer un diccionario anidado, donde la clave es el nombre del personaje:
 
 ```Python
-pantalla = {
-    "Mario": { "vida": 10, "objetos": ["seta", "estrella"]},
-    "Luigi": { "vida": 7, "objetos": []},
-    "Toad": { "vida": 15, "objetos": ["seta"]},
+pantaila = {
+    "Mario": { "bizitza": 10, "objektuak": ["perretxikoa", "izarra"]},
+    "Luigi": { "bizitza": 7, "objektuak": []},
+    "Toad": { "bizitza": 15, "objektuak": ["perretxikoa"]},
 }
 
-print(pantalla["Luigi"]["vida"])  # 7
+print(pantaila["Luigi"]["bizitza"])  # 7
 ```
 
 Pero ¿Cómo sé que tipo de estructura debo diseñar? Depende de cómo la vayas a usar. A veces necesitarás recorrer todos, otras veces necesitarás acceder a un elemento concreto,... según lo que requiera tu programa tendrás que diseñar una estructura concreta.
